--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.3.RELEASE</version>
+    <version>2.1.4.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.daggerok</groupId>
   <artifactId>spring-fu-jafu-example</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.2-SNAPSHOT</version>
 
   <properties>
     <java.version>8</java.version>
@@ -48,7 +48,8 @@
     <dependency>
       <groupId>io.r2dbc</groupId>
       <artifactId>r2dbc-h2</artifactId>
-      <version>1.0.0.M7</version><!-- spring boot < 2.1.3 -->
+      <!--<version>1.0.0.M7</version>--><!-- spring boot < 2.1.3 -->
+      <version>1.0.0.BUILD-SNAPSHOT</version><!-- spring boot == 2.1.4 -->
     </dependency>
     <dependency>
       <groupId>io.r2dbc</groupId>
