--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
   - stop_any 8080 3000 80 >/dev/null
 
 script:
+  # maven
   - ./mvnw >/dev/null
   - java -jar target/*.jar &
   - wait_for 8080
@@ -32,9 +33,26 @@ script:
   - http :8080/count
   - http :8080 login=ololo firstName=trololo lastName=ohoho
   - http :8080/ololo
-  - sleep 1
+  - http :8080/count
+  - http put :8080/ololo login=trololo firstName=trololo lastName=trololo
+  - http :8080/trololo
+  - http :8080/count
   - stop_any 80 8080
-
+  # gradle
+  - ./gradlew >/dev/null
+  - java -jar build/libs/*.jar &
+  - wait_for 8080
+  - http :8080
+  - http :8080/count
+  - http delete :8080
+  - http :8080/count
+  - http :8080 login=ololo firstName=trololo lastName=ohoho
+  - http :8080/ololo
+  - http :8080/count
+  - http put :8080/ololo login=trololo firstName=trololo lastName=trololo
+  - http :8080/trololo
+  - http :8080/count
+  - stop_any 80 8080
 cache:
   directories:
     - $HOME/.m2
